welcome.lessons.welcome.bat.bool1.ParotTrouble.scala.error
parotTrouble:6: error: Unmatched closing brace '}' ignored here
 }
 ^